config/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  strategy: {}
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - image: reckue/account:latest
          name: account
          resources: {}
