config/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: account
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: account
    spec:
      containers:
        - image: reckue/account:latest
          name: account
          resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: account
  name: account
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: account
  type: ClusterIP
status:
  loadBalancer: {}
