config/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: account
  name: account
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: account
  type: ClusterIP
