config/k8s/route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: account
  name: account
spec:
  host: account-reckue.apps.us-east-1.starter.openshift-online.com
  path: "/"
  to:
    kind: Service
    name: account
